# test

./: Makefile  README.md
src/: Makefile.am  configure.ac  func.c  main.c
